更换一下start.sh